# flask-skeleton

./: .env.example  pyproject.toml  wsgi.py
docker/: Dockerfile
migrations/versions/: 9cb23ca7b8bd_initial.py
myapp/: .env.example  .gitignore  .pre-commit-config.yaml
myapp/src/myapp/: __init__.py  errors.py
myapp/src/myapp/blueprints/admin/: errors.py
myapp/src/myapp/blueprints/auth/: errors.py
src/myapp/: __init__.py  cli.py  config.py  errors.py  extensions.py  request_id.py
src/myapp/auth/: service.py
src/myapp/blueprints/admin/: __init__.py  routes.py  utils.py
src/myapp/blueprints/api/: __init__.py  errors.py
src/myapp/blueprints/auth/: __init__.py  forms.py  oauth.py  routes_local.py  routes_oauth.py
src/myapp/models/: __init__.py  auth_identity.py  user.py
src/myapp/static/css/: errors.css
src/myapp/templates/: base.html  index.html
src/myapp/templates/admin/: base.html  dashboard.html
src/myapp/templates/auth/: login.html  register.html
src/myapp/templates/errors/: 403.html  404.html  500.html  base.html
src/myapp/templates/partials/: _logout_form.html
tests/: conftest.py  helpers.py
tests/integration/: test_admin_access.py  test_auth_local.py
tests/unit/: test_auth_service.py  test_config.py  test_config_db_url.py  test_error_handlers.py  test_health.py  test_request_id.py  test_smoke.py
